<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirForm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_information_report"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLines="2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_information_report_subtitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:maxLines="1"
        />

    <!-- Police Station Information -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/psDistrict"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:maxLines="2"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/psPoliceStation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:maxLines="2"
            android:textSize="17sp" />

    </LinearLayout>

    <!-- Complaint / Informant -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/fir_complainant_title"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/complainantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/fir_complainant_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            />

        <EditText
            android:id="@+id/complainantFatherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/fir_complainant_father_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/complainantDOB"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/fir_complainant_dob"
                android:inputType="text"
                android:importantForAutofill="no"
                />

            <EditText
                android:id="@+id/complainantNationality"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:hint="@string/fir_complainant_nationality"
                android:inputType="text"
                android:importantForAutofill="no"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/complainantAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/fir_complainant_address"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:maxLines="2"
            />

    </LinearLayout>

    <com.athishWorks.policeapp.PaintView
        android:id="@+id/paintView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/fir_complainant_signature"
            android:textSize="17sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="#9e9e9e"
            android:maxLines="2"
            android:onClick="ClearSignature"
            android:text="@string/clear_signature" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="#9e9e9e"
        android:onClick="createPDF"
        android:textSize="20sp"
        android:text="@string/submit"
        />

</LinearLayout>