<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".FragmentPage2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complaint_text"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/complainant"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/fir_complainant"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:maxLines="8"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            android:layout_marginEnd="12dp"
            />

    </LinearLayout>

</FrameLayout>